--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -839,3 +839,21 @@ year = {2006}
   pages =       "255--291",
   \URL =         "http://www.ai.mit.edu/projects/jmlr/papers/volume5/baram04a/baram04a.pdf",
 }
+
+@Article{journals/bioinformatics/LewinSA0P04,
+  title =       "Quantitative {DNA} methylation analysis based on
+                 four-dye trace data from direct sequencing of {PCR}
+                 amplificates",
+  author =      "J{\"o}rn Lewin and Armin O. Schmitt and P{\'e}ter
+                 Adorj{\'a}n and Thomas Hildmann 0002 and Christian
+                 Piepenbrock",
+  journal =     "Bioinformatics",
+  year =        "2004",
+  number =      "17",
+  volume =      "20",
+  bibdate =     "2005-01-14",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/bioinformatics/bioinformatics20.html#LewinSA0P04",
+  pages =       "3005--3012",
+  URL =         "http://dx.doi.org/10.1093/bioinformatics/bth346",
+}
