--- a/metodologia.tex
+++ b/metodologia.tex
@@ -7,7 +7,8 @@ citadas no Capítulo \ref{cap:contrib}.
 \section{Metodologia}\label{sec:metodologia}
 Para haver solidez estatística e também para uma boa representatividade dos variados domínios
 existentes em aplicações reais, foram selecionadas as cem bases de dados mais diversas
-do projeto \red{ucipp <- refenciar como?}.
+do projeto \red{ucipp <- refenciar como?} - porém apenas noventa e seis bases foram viáveis com relação a tempo de processamento
+e puderam ter seus experimentos terminados.
 O critério de diversidade envolveu manter apenas uma dentre cada grupo de bases de um mesmo domínio.
 Com exceção de algumas que tivessem características (atributos, classes e número de exemplos)
 suficientemente diferentes ou cuja acurácia passiva fosse suficientemente distinta para pelo
