--- a/propostas.tex
+++ b/propostas.tex
@@ -104,11 +104,11 @@ A ordem de complexidade do \textit{SG-multi} é $\mathcal{O}(|Y|)$.
 
 \subsection{Extensões da amostragem ponderada por densidade}
 
-\subsubsection{AgTU}% - Amostragem agnóstica ponderada por densidade e utilidade do treinamento}
+\subsubsection{AgTU - Amostragem agnóstica ponderada por densidade e utilidade do treinamento}
 
-\subsubsection{DWLU}% - Amostragem ponderada por densidade e utilidade de cada rótulo}
+\subsubsection{DWLU - Amostragem ponderada por densidade e utilidade de cada rótulo}
 
-\subsubsection{AgLU}% - Amostragem agnóstica ponderada por densidade e utilidade de cada rótulo}
+\subsubsection{AgLU - Amostragem agnóstica ponderada por densidade e utilidade de cada rótulo}
  
 \subsection{Meta-estratégia}
 
