--- a/active-learning.tex
+++ b/active-learning.tex
@@ -210,7 +210,8 @@ de amostragem ativa cujos principais representantes são apresentados na seção se
 
 
 Nesta seção são elencadas as estratégias investigadas neste trabalho.
-São apresentados suas ordens de complexidade espaciais e temporais,
+São apresentados suas ordens de complexidade
+% espaciais e temporais,
 suas principais características e seus princípios de funcionamento.
 
 \subsection{Amostragem por incerteza}
