--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -857,3 +857,45 @@ year = {2006}
   pages =       "3005--3012",
   URL =         "http://dx.doi.org/10.1093/bioinformatics/bth346",
 }
+
+@book{chong2013introduction,
+  title={An introduction to optimization},
+  author={Chong, Edwin KP and Zak, Stanislaw H},
+  volume={76},
+  year={2013},
+  publisher={John Wiley \& Sons}
+}
+
+@book{rao1971generalized,
+  title={Generalized inverse of matrices and its applications},
+  author={Rao, Calyampudi Radhakrishna and Mitra, Sujit Kumar},
+  volume={7},
+  year={1971},
+  publisher={Wiley New York}
+}
+
+@book{kreyszig2007advanced,
+  title={Advanced engineering mathematics},
+  author={Kreyszig, Erwin},
+  year={2007},
+  publisher={John Wiley \& Sons}
+}
+
+@InProceedings{conf/iastedCI/HuangLRSS05,
+  title =       "On-Line Sequential Extreme Learning Machine",
+  author =      "Guang-Bin Huang and Nan-Ying Liang and Hai-Jun Rong
+                 and Paramasivan Saratchandran and Narasimhan
+                 Sundararajan",
+  bibdate =     "2006-05-04",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/iastedCI/ci2005.html#HuangLRSS05",
+  booktitle =   "Computational Intelligence",
+  booktitle =   "{IASTED} International Conference on Computational
+                 Intelligence, Calgary, Alberta, Canada, July 4-6,
+                 2005",
+  publisher =   "IASTED/ACTA Press",
+  year =        "2005",
+  editor =      "M. H. Hamza",
+  ISBN =        "0-88986-481-0",
+  pages =       "232--237",
+}
