--- a/introducao.tex
+++ b/introducao.tex
@@ -11,10 +11,7 @@
 
 \subsection{Revisão sistemática\ano{excluir?}}
 \ano{a revisão sist. não chegou a lugar algum, não compensaria dedicar um capítulo inteiro a
-ela}
-
-\ano{tenho uns 50 artigos de uma busca sem foco no tema que a tese passou a ter; pode ser útil
-pra mostrar uma busca sistemática de estratégias na literatura}
+ela; porém no final de tudo, com a tese quase pronta, posso readequá-la e incluí-la}
 
 \blue{Revisão bibliográfica sistemática é um procedimento de identificação,
 avaliação e interpretação de toda pesquisa relevante disponível a respeito
@@ -333,16 +330,15 @@ verossimilhança com aplicações reais:
  \item um rótulo inicial por classe - simulando
    \ing{aprendizado guiado}{guided learning} \citep{conf/kdd/AttenbergP10};
 \end{itemize}
-Outra condição é que a sequência de consultas não é necessariamente ótima,
-pois nenhuma das estratégias implementadas
-tira proveito da informação sobre o orçamento disponível.
-Essa possibilidade, mai teórica do que prática,
+Outra característica está no não conhecimento do orçamento disponível por parte das estratégias implementadas.
+Isso implica na geração de sequências de consultas não necessariamente ótimas.
+Essa possibilidade, mais teórica do que prática,
 decorre do fato do processo ativo de amostragem não ser uma
-\textit{cadeia de Markov} de primeira ordem, ou seja,
-a consulta ótima depende de quantas ainda podem ser feitas \citep{conf/icml/RoyM01}.
+\textit{cadeia de Markov} de primeira ordem \citep{conf/icml/RoyM01}.
+A consulta ótima dependeria de quantas ainda podem ser feitas.
 
 \section{Notação}\label{notacao}
-\esb{O número de classes permanece indicado por $|Y|$ e a quantidade inicial de exemplos é
+\esb{O número de classes é indicado por $|Y|$ e a quantidade inicial de exemplos é
 $|\mathcal{U}|$ - mantendo a notação
 usual de os símbolos $\mathcal{U}$ e $\mathcal{L}$ representarem a reserva de exemplos
 \citep{series/synthesis/2012Settles} e o conjunto de exemplos já rotulados, respectivamente.}
