--- a/aprendizado-supervisionado.tex
+++ b/aprendizado-supervisionado.tex
@@ -21,6 +21,7 @@ por meio de perguntas \citep{series/synthesis/2012Settles}.
 A pergunta do cenário mais comum na literatura é ``\textit{Qual é o rótulo do exemplo $\bm{x}$?}''.
 O problema de se decidir qual seria o melhor $\bm{x}$ é a
 motivação basilar desta tese.
+\ano{basilar pois é em oposição à motivação imediata e específica}
 
 \ano{citar problemas? fadiga ...}
 
@@ -31,9 +32,9 @@ motivação basilar desta tese.
 \tar{provavelmente a meta-estratégia ou}
 
 \tar{a prova empírica da viabilidade do AA, coisa nunca provada com
-a devida análise de risco e com tal robustez estatística}
+a devida análise de risco e com robustez estatística}
 
-\tar{as contribuições secundárias vão ser mencionadas e suas existências vão ser sempre
+\tar{as contribuições secundárias vão ser mencionadas e suas existências devem ser sempre
 justificadas em função da contribuição principal}
 
 % Algumas habilidades humanas vêm claramente programadas geneticamente e outras são apenas a execução de passos memorizados.
