--- a/tarefas.tex
+++ b/tarefas.tex
@@ -2,6 +2,5 @@
  \tarefa{voltar indice pro lugar normal}
  \tarefa{extrair infos/tarefas relevantes do google docs}
  \tarefa{remover citações de baixa qualidade}
- \tarefa{escrever sobre implementação (apendice?):}
- \tarefa{URL, diagrama de classes, LOC, custos totais CPU/memória/disco, total de
+ \tarefa{escrever sobre implementação (apendice?): URL, diagrama de classes, LOC, custos totais CPU/memória/disco, total de
 registros no BD}
