--- a/active-learning.tex
+++ b/active-learning.tex
@@ -50,8 +50,8 @@ Assim, um direcionamento adequado do esforço de aprendizado tem como resultado u
 processo de rotulação mais econômico.
 
 Na literatura de aprendizado ativo há diversas propostas.
-Elas são frequentemente baseadas em diferentes concepções de relevância de exemplos
-ou mesmo diferentes teorias do aprendizado.
+Elas são frequentemente baseadas em diferentes concepções de relevância de
+exemplos ou mesmo diferentes teorias do aprendizado.
 A amostragem por incerteza, por exemplo, assume que os exemplos e suas classes pertencem a uma
 distribuição de probabilidades - em linha com a teoria do aprendizado
 estatístico \citep{books/daglib/0097035};\red{( <- verificar)}
