--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -899,3 +899,21 @@ year = {2006}
   ISBN =        "0-88986-481-0",
   pages =       "232--237",
 }
+
+@InProceedings{conf/ijcnn/SoutoPSACLS08,
+  title =       "Ranking and selecting clustering algorithms using a
+                 meta-learning approach",
+  author =      "Marc{\'i}lio Carlos Pereira de Souto and Ricardo
+                 Bastos Cavalcante Prud{\^e}ncio and Rodrigo G. F.
+                 Soares and Daniel S. A. de Araujo and Ivan G. Costa and
+                 Teresa Bernarda Ludermir and Alexander Schliep",
+  publisher =   "IEEE",
+  year =        "2008",
+  bibdate =     "2009-01-13",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/ijcnn/ijcnn2008.html#SoutoPSACLS08",
+  booktitle =   "IJCNN",
+  \crossref =    "conf/ijcnn/2008",
+  pages =       "3729--3735",
+  \URL =         "http://dx.doi.org/10.1109/IJCNN.2008.4634333",
+}
