--- a/metodologia.tex
+++ b/metodologia.tex
@@ -23,6 +23,10 @@ providos pela ferramenta Weka \citep{journals/sigkdd/HallFHPRW09}.
 
 \subsection{Avaliação}\label{sec:cenario}
 
+\ano{em algum momento preciso comparar com desempenho
+passivo (todos exemplos)); o experimento poderia continuar rodando até que
+a maior parte das bases tenha todas as estrtégias atingido o dese. passivo.}
+
 \subsubsection{Métricas}
 kappa:\citep{conf/pkdd/Shah11}
 accbal: \citep{journals/bmcbi/MassoV10}
