--- a/propostas.tex
+++ b/propostas.tex
@@ -111,7 +111,7 @@ A ordem de complexidade do \textit{SG-multi} é $\mathcal{O}(|Y|)$.
 \subsubsection{AgLU - Amostragem agnóstica ponderada por densidade e utilidade de cada rótulo}
  
 \subsection{Meta-estratégia}
-
+\ano{``melhoram`` statlog, tirando log \citep{conf/ijcnn/SoutoPSACLS08}}
 \subsection{Meta-estratégia dinâmica}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
