--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -917,3 +917,79 @@ year = {2006}
   pages =       "3729--3735",
   \URL =         "http://dx.doi.org/10.1109/IJCNN.2008.4634333",
 }
+
+@phdthesis{rossi2014meta,
+  title={Meta-aprendizado aplicado a fluxos cont{\'\i}nuos de dados},
+  author={Rossi, Andre Lu{\'\i}s Debiaso},
+  year={2014},
+  school={Universidade de S{\~a}o Paulo}
+}
+
+@Article{journals/jmlr/PerlichPS03,
+  title =       "Tree Induction vs. Logistic Regression: {A}
+                 Learning-Curve Analysis",
+  author =      "Claudia Perlich and Foster J. Provost and Jeffrey S.
+                 Simonoff",
+  journal =     "Journal of Machine Learning Research",
+  year =        "2003",
+  volume =      "4",
+  bibdate =     "2004-02-05",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/jmlr/jmlr4.html#PerlichPS03",
+  pages =       "211--255",
+  URL =         "http://www.jmlr.org/papers/v4/perlich03a.html",
+}
+
+@Article{journals/sigkdd/AttenbergP10,
+  title =       "Inactive learning?: difficulties employing active
+                 learning in practice",
+  author =      "Josh Attenberg and Foster J. Provost",
+  journal =     "SIGKDD Explorations",
+  year =        "2010",
+  number =      "2",
+  volume =      "12",
+  bibdate =     "2011-04-20",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/sigkdd/sigkdd12.html#AttenbergP10",
+  pages =       "36--41",
+  URL =         "http://doi.acm.org/10.1145/1964897.1964906",
+}
+
+@phdthesis{kalousis2002algorithm,
+  title={Algorithm selection via meta-learning},
+  author={Kalousis, Alexandros},
+  year={2002},
+  school={Universite de Geneve}
+}
+
+@InProceedings{santos2014viabilidade,
+  title={Viabilidade do Aprendizado Ativo em M{\'a}quinas Extremas},
+  author={Davi P. Santos and Andr{\'e} CPLF Carvalho},
+  booktitle={Brazilian Conference on Intelligent Systems and Encontro Nacional de Inteligência Artificial e Computacional},
+  year =        "2014",
+}
+
+@InProceedings{conf/hais/SantosC14,
+  title =       "Comparison of Active Learning Strategies and Proposal
+                 of a Multiclass Hypothesis Space Search",
+  author =      "Davi P. Santos and Andr{\'e} Carlos Ponce Leon
+                 Ferreira Carvalho",
+  bibdate =     "2014-05-22",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/hais/hais2014.html#SantosC14",
+  booktitle =   "HAIS",
+  booktitle =   "Hybrid Artificial Intelligence Systems - 9th
+                 International Conference, {HAIS} 2014, Salamanca,
+                 Spain, June 11-13, 2014. Proceedings",
+  publisher =   "Springer",
+  year =        "2014",
+  volume =      "8480",
+  editor =      "Marios M. Polycarpou and Andr{\'e} Carlos Ponce Leon
+                 Ferreira de Carvalho and Jeng-Shyang Pan and Michal
+                 Wozniak and H{\'e}ctor Quinti{\'a}n and Emilio
+                 Corchado",
+  ISBN =        "978-3-319-07616-4",
+  pages =       "618--629",
+  series =      "Lecture Notes in Computer Science",
+  \URL =         "http://dx.doi.org/10.1007/978-3-319-07617-1",
+}
