--- a/macros.tex
+++ b/macros.tex
@@ -6,6 +6,7 @@
 \newcommand{\yt}{\bm{y}_{(t)}\xspace}
 \newcommand{\y}{\bm{y}\xspace}
 \newcommand{\pool}{reserva de exemplos\xspace}
+\newcommand{\pools}{reservas de exemplos\xspace}
 \newcommand{\U}{\mathcal{U}\xspace}
 \newcommand{\Ut}{\U_{(t)}\xspace}
 \newcommand{\Lt}{\mathcal{L}_{(t)}\xspace}
@@ -26,12 +27,6 @@
 \newcommand{\svm}{máquina de vetores de suporte\xspace}
 
 \newcommand{\tarefa}[1] {\addcontentsline{toc}{section}{\tar{#1}}}
-
-
-
-
-
-
 
 
 
