separei metodol e resuolts em 2 caps

--- a/propostas.tex
+++ b/propostas.tex
@@ -107,7 +107,7 @@ A ordem de complexidade do \textit{SG-multi} é $\mathcal{O}(|Y|)$.
 % inspiration and may be more adequate to select instances from the disagreement area.
 
 
-% \subsection{SVMmulti} %parece que foi um fiasco quando desbalanceado (pior que random)
+% \subsection{SVMmulti} %parece que foi um fiasco quando desbalanceado (pior que random) mas está rodando kff pra ter certeza do fiasco
 
 \subsection{Extensões da amostragem ponderada por densidade}
 
