--- a/metodologia.tex
+++ b/metodologia.tex
@@ -1,4 +1,4 @@
-\chapter{Experimentos e Resultados}\label{cap:experimentos}
+\chapter{Metodologia}\label{cap:metodologia}
 \ano{outline: preliminar;
 ... árvore ...
 fazer tabela de intersecções de metaexemplos (obviamente com empates);
@@ -13,7 +13,7 @@ citadas no Capítulo \ref{cap:contrib}.
 % podem ter baixa performance com muitos dados
 % \citep{journals/sigkdd/AttenbergP10,journals/jmlr/PerlichPS03}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Metodologia}\label{sec:metodologia}
+
 Para haver solidez estatística e também para uma boa representatividade dos
 variados domínios existentes em aplicações reais, foram selecionadas as
 cem \ano{ou 94?} bases de dados mais diversas
